--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Dropiffy</title>
+  <link rel="stylsheet" type="text/css" href="styles.css">
 </head>
 <body>
 <div id="app"></div>
